crates/uv-requirements-txt/src/snapshots/uv_requirements_txt__test__parse-windows-bare-url.txt.snap
---
source: crates/uv-requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Unnamed(
                UnnamedRequirement {
                    url: VerbatimParsedUrl {
                        parsed_url: Directory(
                            ParsedDirectoryUrl {
                                url: DisplaySafeUrl {
                                    scheme: "file",
                                    cannot_be_a_base: false,
                                    username: "",
                                    password: None,
                                    host: None,
                                    port: None,
                                    path: "/<REQUIREMENTS_DIR>/test/packages/black_editable",
                                    query: None,
                                    fragment: None,
                                },
                                install_path: "<REQUIREMENTS_DIR>/test/packages/black_editable",
                                editable: None,
                                virtual: None,
                            },
                        ),
                        verbatim: VerbatimUrl {
                            url: DisplaySafeUrl {
                                scheme: "file",
                                cannot_be_a_base: false,
                                username: "",
                                password: None,
                                host: None,
                                port: None,
                                path: "/<REQUIREMENTS_DIR>/test/packages/black_editable",
                                query: None,
                                fragment: None,
                            },
                            given: Some(
                                "./test/packages/black_editable",
                            ),
                            expanded: false,
                            force_relative: false,
                        },
                    },
                    extras: [],
                    marker: true,
                    origin: Some(
                        File(
                            "<REQUIREMENTS_DIR>/bare-url.txt",
                        ),
                    ),
                },
            ),
            hashes: [],
            config_settings: None,
        },
        RequirementEntry {
            requirement: Unnamed(
                UnnamedRequirement {
                    url: VerbatimParsedUrl {
                        parsed_url: Directory(
                            ParsedDirectoryUrl {
                                url: DisplaySafeUrl {
                                    scheme: "file",
                                    cannot_be_a_base: false,
                                    username: "",
                                    password: None,
                                    host: None,
                                    port: None,
                                    path: "/<REQUIREMENTS_DIR>/test/packages/black_editable",
                                    query: None,
                                    fragment: None,
                                },
                                install_path: "<REQUIREMENTS_DIR>/test/packages/black_editable",
                                editable: None,
                                virtual: None,
                            },
                        ),
                        verbatim: VerbatimUrl {
                            url: DisplaySafeUrl {
                                scheme: "file",
                                cannot_be_a_base: false,
                                username: "",
                                password: None,
                                host: None,
                                port: None,
                                path: "/<REQUIREMENTS_DIR>/test/packages/black_editable",
                                query: None,
                                fragment: None,
                            },
                            given: Some(
                                "./test/packages/black_editable",
                            ),
                            expanded: false,
                            force_relative: false,
                        },
                    },
                    extras: [
                        ExtraName(
                            "dev",
                        ),
                    ],
                    marker: true,
                    origin: Some(
                        File(
                            "<REQUIREMENTS_DIR>/bare-url.txt",
                        ),
                    ),
                },
            ),
            hashes: [],
            config_settings: None,
        },
        RequirementEntry {
            requirement: Unnamed(
                UnnamedRequirement {
                    url: VerbatimParsedUrl {
                        parsed_url: Directory(
                            ParsedDirectoryUrl {
                                url: DisplaySafeUrl {
                                    scheme: "file",
                                    cannot_be_a_base: false,
                                    username: "",
                                    password: None,
                                    host: None,
                                    port: None,
                                    path: "/<REQUIREMENTS_DIR>/test/packages/black_editable",
                                    query: None,
                                    fragment: None,
                                },
                                install_path: "<REQUIREMENTS_DIR>/test/packages/black_editable",
                                editable: None,
                                virtual: None,
                            },
                        ),
                        verbatim: VerbatimUrl {
                            url: DisplaySafeUrl {
                                scheme: "file",
                                cannot_be_a_base: false,
                                username: "",
                                password: None,
                                host: None,
                                port: None,
                                path: "/<REQUIREMENTS_DIR>/test/packages/black_editable",
                                query: None,
                                fragment: None,
                            },
                            given: Some(
                                "file:///test/packages/black_editable",
                            ),
                            expanded: false,
                            force_relative: false,
                        },
                    },
                    extras: [],
                    marker: true,
                    origin: Some(
                        File(
                            "<REQUIREMENTS_DIR>/bare-url.txt",
                        ),
                    ),
                },
            ),
            hashes: [],
            config_settings: None,
        },
        RequirementEntry {
            requirement: Unnamed(
                UnnamedRequirement {
                    url: VerbatimParsedUrl {
                        parsed_url: Directory(
                            ParsedDirectoryUrl {
                                url: DisplaySafeUrl {
                                    scheme: "file",
                                    cannot_be_a_base: false,
                                    username: "",
                                    password: None,
                                    host: None,
                                    port: None,
                                    path: "/<REQUIREMENTS_DIR>/test/packages/black%20editable",
                                    query: None,
                                    fragment: None,
                                },
                                install_path: "<REQUIREMENTS_DIR>/test/packages/black editable",
                                editable: None,
                                virtual: None,
                            },
                        ),
                        verbatim: VerbatimUrl {
                            url: DisplaySafeUrl {
                                scheme: "file",
                                cannot_be_a_base: false,
                                username: "",
                                password: None,
                                host: None,
                                port: None,
                                path: "/<REQUIREMENTS_DIR>/test/packages/black%20editable",
                                query: None,
                                fragment: None,
                            },
                            given: Some(
                                "./test/packages/black editable",
                            ),
                            expanded: false,
                            force_relative: false,
                        },
                    },
                    extras: [],
                    marker: true,
                    origin: Some(
                        File(
                            "<REQUIREMENTS_DIR>/bare-url.txt",
                        ),
                    ),
                },
            ),
            hashes: [],
            config_settings: None,
        },
        RequirementEntry {
            requirement: Unnamed(
                UnnamedRequirement {
                    url: VerbatimParsedUrl {
                        parsed_url: Directory(
                            ParsedDirectoryUrl {
                                url: DisplaySafeUrl {
                                    scheme: "file",
                                    cannot_be_a_base: false,
                                    username: "",
                                    password: None,
                                    host: None,
                                    port: None,
                                    path: "/<REQUIREMENTS_DIR>/test/packages/black%20editable",
                                    query: None,
                                    fragment: None,
                                },
                                install_path: "<REQUIREMENTS_DIR>/test/packages/black editable",
                                editable: None,
                                virtual: None,
                            },
                        ),
                        verbatim: VerbatimUrl {
                            url: DisplaySafeUrl {
                                scheme: "file",
                                cannot_be_a_base: false,
                                username: "",
                                password: None,
                                host: None,
                                port: None,
                                path: "/<REQUIREMENTS_DIR>/test/packages/black%20editable",
                                query: None,
                                fragment: None,
                            },
                            given: Some(
                                "./test/packages/black editable",
                            ),
                            expanded: false,
                            force_relative: false,
                        },
                    },
                    extras: [],
                    marker: python_full_version >= '3.9',
                    origin: Some(
                        File(
                            "<REQUIREMENTS_DIR>/bare-url.txt",
                        ),
                    ),
                },
            ),
            hashes: [],
            config_settings: None,
        },
        RequirementEntry {
            requirement: Unnamed(
                UnnamedRequirement {
                    url: VerbatimParsedUrl {
                        parsed_url: Directory(
                            ParsedDirectoryUrl {
                                url: DisplaySafeUrl {
                                    scheme: "file",
                                    cannot_be_a_base: false,
                                    username: "",
                                    password: None,
                                    host: None,
                                    port: None,
                                    path: "/<REQUIREMENTS_DIR>/test/packages/black%20editable",
                                    query: None,
                                    fragment: None,
                                },
                                install_path: "<REQUIREMENTS_DIR>/test/packages/black editable",
                                editable: None,
                                virtual: None,
                            },
                        ),
                        verbatim: VerbatimUrl {
                            url: DisplaySafeUrl {
                                scheme: "file",
                                cannot_be_a_base: false,
                                username: "",
                                password: None,
                                host: None,
                                port: None,
                                path: "/<REQUIREMENTS_DIR>/test/packages/black%20editable",
                                query: None,
                                fragment: None,
                            },
                            given: Some(
                                "./test/packages/black editable",
                            ),
                            expanded: false,
                            force_relative: false,
                        },
                    },
                    extras: [],
                    marker: true,
                    origin: Some(
                        File(
                            "<REQUIREMENTS_DIR>/bare-url.txt",
                        ),
                    ),
                },
            ),
            hashes: [],
            config_settings: None,
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    require_hashes: false,
    no_binary: None,
    only_binary: None,
}
